<resources>
    <string name="app_name">Echelon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_skip_to_leaderboard">Checkout Leader Boards</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_leaderboard">Leaderboards</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="event_date">Starts on %1$s</string>

    <string name="error_general">operation failed! retry</string>
    <string name="empty_general">Nothing in here!!</string>
    <string name="empty_news">Uh oh!! No news item found</string>

    <string name="timer_msg">You have %1$d minutes %2$d seconds to answer this question</string>
    <string name="timer_msg_sec">You have %1$d seconds to answer this question</string>
    <string name="timer_expire">Time expired for this question</string>
    <string name="loading_question">Hold on !! loading the question for you..</string>
    <string name="loading_event">Hold on !! loading events for you..</string>
    <string name="loading_news">Hold on !! loading news for you..</string>
    <string name="loading_login">Hold on !! trying to log you in..</string>
    <string name="internet_unavailable">You need working internet connection for this</string>
    <string name="loading">loading please wait..</string>
    <string name="saving_response">submitting your response, please wait..</string>

    <string name="login_message">You must be logged in to answer questions</string>
    <string name="phase_leaderboard">%1$s leaderboard</string>
    <string name="scroll_to_me">Find Me</string>

    <string name="time_seconds"> %1$.3f Sec</string>
    <string name="time_minutes_seconds"> %1$d Min %2$.3f Sec</string>
    <string name="team"> %1$s</string>
    <string name="score"> %1$.2f</string>
    <string name="correct"> %1$d</string>
    <string name="incorrect"> %1$d</string>
    <string name="special_msg">Special Message</string>
    <string name="no_internet">No internet connection!! Turn on the internet to submit answer.</string>
    <string name="q_patience">"Be patient, for the world is broad and wide."</string>
    <string name="q_fault">"The fault, dear Brutus, is not in our stars, but in ourselves."</string>
    <string name="q_fear">"Fear cuts deeper than swords."</string>
    <string name="q_victory">"Victory has a thousand fathers. Defeat is an orphan."</string>
    <string name="q_wisdom">“We can know only that we know nothing. And that is the highest degree of human wisdom.”</string>
    <string name="q_thought">“I think, therefore I am.”</string>
    <string name="q_freedom">“People demand freedom of speech as a compensation for the freedom of thought which they seldom use.”</string>
    <string name="q_fast">"Fast is fine, but accuracy is everything."</string>


</resources>
